environments/gloo-gateway/gateway-api/1.18/ai-gateway/lb-failover-demo/aigw-config/base/openai/openai-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openai
  namespace: gloo-system
spec:
  #hostnames:
  #  - llm.glootest.com
  parentRefs:
    - name: ai-gateway
      namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /openai
    #filters:
    #- type: URLRewrite
    #  urlRewrite:
    #    path:
    #      type: ReplaceFullPath
    #      replaceFullPath: /v1/chat/completions
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.solo.io
        kind: RouteOption
        name: openai-route-policies
    backendRefs:
    - name: openai
      namespace: gloo-system
      group: gloo.solo.io
      kind: Upstream
